Enable seven segment LEDs on dev board

--- a/altera/LispMicrocontroller.qsf
+++ b/altera/LispMicrocontroller.qsf
@@ -51,13 +51,41 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
-set_location_assignment PIN_U18 -to out[7]
-set_location_assignment PIN_Y18 -to out[6]
-set_location_assignment PIN_V19 -to out[5]
-set_location_assignment PIN_T18 -to out[4]
-set_location_assignment PIN_Y19 -to out[3]
-set_location_assignment PIN_U19 -to out[2]
-set_location_assignment PIN_R19 -to out[1]
-set_location_assignment PIN_R20 -to out[0]
-set_location_assignment PIN_D12 -to clk
+set_location_assignment PIN_U18 -to r_led[7]
+set_location_assignment PIN_Y18 -to r_led[6]
+set_location_assignment PIN_V19 -to r_led[5]
+set_location_assignment PIN_T18 -to r_led[4]
+set_location_assignment PIN_Y19 -to r_led[3]
+set_location_assignment PIN_U19 -to r_led[2]
+set_location_assignment PIN_R19 -to r_led[1]
+set_location_assignment PIN_R20 -to r_led[0]
+set_location_assignment PIN_L1 -to clk
+set_location_assignment PIN_D4 -to digit3[6]
+set_location_assignment PIN_F3 -to digit3[5]
+set_location_assignment PIN_L8 -to digit3[4]
+set_location_assignment PIN_J4 -to digit3[3]
+set_location_assignment PIN_D6 -to digit3[2]
+set_location_assignment PIN_D5 -to digit3[1]
+set_location_assignment PIN_F4 -to digit3[0]
+set_location_assignment PIN_D3 -to digit2[6]
+set_location_assignment PIN_E4 -to digit2[5]
+set_location_assignment PIN_E3 -to digit2[4]
+set_location_assignment PIN_C1 -to digit2[3]
+set_location_assignment PIN_C2 -to digit2[2]
+set_location_assignment PIN_G6 -to digit2[1]
+set_location_assignment PIN_G5 -to digit2[0]
+set_location_assignment PIN_D1 -to digit1[6]
+set_location_assignment PIN_D2 -to digit1[5]
+set_location_assignment PIN_G3 -to digit1[4]
+set_location_assignment PIN_H4 -to digit1[3]
+set_location_assignment PIN_H5 -to digit1[2]
+set_location_assignment PIN_H6 -to digit1[1]
+set_location_assignment PIN_E1 -to digit1[0]
+set_location_assignment PIN_E2 -to digit0[6]
+set_location_assignment PIN_F1 -to digit0[5]
+set_location_assignment PIN_F2 -to digit0[4]
+set_location_assignment PIN_H1 -to digit0[3]
+set_location_assignment PIN_H2 -to digit0[2]
+set_location_assignment PIN_J1 -to digit0[1]
+set_location_assignment PIN_J2 -to digit0[0]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
