--- a/altera/LispMicrocontroller.qsf
+++ b/altera/LispMicrocontroller.qsf
@@ -88,4 +88,9 @@ set_location_assignment PIN_H1 -to digit0[3]
 set_location_assignment PIN_H2 -to digit0[2]
 set_location_assignment PIN_J1 -to digit0[1]
 set_location_assignment PIN_J2 -to digit0[0]
+set_location_assignment PIN_T21 -to buttons[3]
+set_location_assignment PIN_T22 -to buttons[2]
+set_location_assignment PIN_R21 -to buttons[1]
+set_location_assignment PIN_R22 -to buttons[0]
+
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
