Remove memory from inside of lisp core, for cleanliness

--- a/altera/LispMicrocontroller.qsf
+++ b/altera/LispMicrocontroller.qsf
@@ -43,6 +43,8 @@ set_global_assignment -name ORIGINAL_QUARTUS_VERSION "11.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "09:49:39  DECEMBER 29, 2011"
 set_global_assignment -name LAST_QUARTUS_VERSION "11.0 SP1"
 set_global_assignment -name VERILOG_FILE ../lisp_core.v
+set_global_assignment -name VERILOG_FILE ../ulisp.v
+set_global_assignment -name VERILOG_FILE ../memory.v
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
