--- a/altera/LispMicrocontroller.qsf
+++ b/altera/LispMicrocontroller.qsf
@@ -61,7 +61,7 @@ set_location_assignment PIN_Y19 -to r_led[3]
 set_location_assignment PIN_U19 -to r_led[2]
 set_location_assignment PIN_R19 -to r_led[1]
 set_location_assignment PIN_R20 -to r_led[0]
-set_location_assignment PIN_L1 -to clk
+set_location_assignment PIN_L1 -to clk50
 set_location_assignment PIN_D4 -to digit3[6]
 set_location_assignment PIN_F3 -to digit3[5]
 set_location_assignment PIN_L8 -to digit3[4]
@@ -94,5 +94,6 @@ set_location_assignment PIN_T21 -to buttons[3]
 set_location_assignment PIN_T22 -to buttons[2]
 set_location_assignment PIN_R21 -to buttons[1]
 set_location_assignment PIN_R22 -to buttons[0]
+
 
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
