--- a/altera/LispMicrocontroller.qsf
+++ b/altera/LispMicrocontroller.qsf
@@ -96,4 +96,7 @@ set_location_assignment PIN_R21 -to buttons[1]
 set_location_assignment PIN_R22 -to buttons[0]
 
 
+set_global_assignment -name SYNTH_TIMING_DRIVEN_SYNTHESIS OFF
+set_global_assignment -name HDL_MESSAGE_OFF 10222
+set_global_assignment -name HDL_MESSAGE_OFF 10850
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
