--- a/fpga/7seg/LispMicrocontroller.qsf
+++ b/fpga/7seg/LispMicrocontroller.qsf
@@ -42,14 +42,9 @@ set_global_assignment -name TOP_LEVEL_ENTITY top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "11.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "09:49:39  DECEMBER 29, 2011"
 set_global_assignment -name LAST_QUARTUS_VERSION "11.0 SP1"
-set_global_assignment -name VERILOG_FILE ../lisp_core.v
-set_global_assignment -name VERILOG_FILE ../ulisp.v
-set_global_assignment -name VERILOG_FILE ../rom.v
-set_global_assignment -name VERILOG_FILE ../ram.v
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
-set_global_assignment -name VERILOG_FILE top.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
@@ -103,4 +98,9 @@ set_global_assignment -name HDL_MESSAGE_OFF 10850
 set_global_assignment -name HDL_MESSAGE_OFF 10230
 
 
+set_global_assignment -name VERILOG_FILE ../../rom.v
+set_global_assignment -name VERILOG_FILE ../../ram.v
+set_global_assignment -name VERILOG_FILE ../../lisp_core.v
+set_global_assignment -name VERILOG_FILE ../../ulisp.v
+set_global_assignment -name VERILOG_FILE top.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
