--- a/fpga/game/top.qsf
+++ b/fpga/game/top.qsf
@@ -42,15 +42,6 @@ set_global_assignment -name TOP_LEVEL_ENTITY top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "11.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:44:34  MARCH 04, 2012"
 set_global_assignment -name LAST_QUARTUS_VERSION "11.0 SP1"
-set_global_assignment -name VERILOG_FILE ../ulisp.v
-set_global_assignment -name VERILOG_FILE ../rom.v
-set_global_assignment -name VERILOG_FILE ../ram.v
-set_global_assignment -name VERILOG_FILE ../lisp_core.v
-set_global_assignment -name VERILOG_FILE vga_timing_generator.v
-set_global_assignment -name VERILOG_FILE top.v
-set_global_assignment -name VERILOG_FILE sprite_detect.v
-set_global_assignment -name VERILOG_FILE display_controller.v
-set_global_assignment -name VERILOG_FILE arom.v
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
@@ -77,4 +68,13 @@ set_location_assignment PIN_R22 -to buttons[0]
 set_location_assignment PIN_R21 -to buttons[1]
 set_location_assignment PIN_T22 -to buttons[2]
 set_location_assignment PIN_T21 -to buttons[3]
+set_global_assignment -name VERILOG_FILE ../../ulisp.v
+set_global_assignment -name VERILOG_FILE ../../rom.v
+set_global_assignment -name VERILOG_FILE ../../ram.v
+set_global_assignment -name VERILOG_FILE ../../lisp_core.v
+set_global_assignment -name VERILOG_FILE vga_timing_generator.v
+set_global_assignment -name VERILOG_FILE top.v
+set_global_assignment -name VERILOG_FILE sprite_detect.v
+set_global_assignment -name VERILOG_FILE display_controller.v
+set_global_assignment -name VERILOG_FILE arom.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
