--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: c
+sudo: false
+addons:
+  apt:
+    packages:
+      -iverilog
 before_install:
 - sudo apt-get install iverilog
 script:
