--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,5 +14,7 @@ jobs:
     steps:
     - name: Install iverilog
       run: sudo apt-get install -y iverilog
+    - name: Where am I
+      run: pwd
     - name: Run Tests
       run: make test
