--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,6 @@ jobs:
     - name: Install iverilog
       run: sudo apt-get install -y iverilog
     - name: Where am I
-      run: pwd
+      run: pwd && ls -l
     - name: Run Tests
       run: make test
